Fixed jittering whiles scrolling on iOS (was related to Pull2Refresh). System language of iobroker will be loaded and used.

--- a/www/index.css
+++ b/www/index.css
@@ -41,9 +41,8 @@ a {
 
 #View{
 	background-color: transparent;
-	height: 100%;
-	-webkit-overflow-scrolling: touch;
-	overflow-y: scroll;}
+	overflow-y: scroll;
+}
 
 #ViewMain {
 	padding: 3px;
